# flitter

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  dist.sh  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
mk1/: board_routed.kicad_pcb
mk2/: BUILD.bazel  board_routed.kicad_pcb  layout.py
mk3/: BUILD.bazel  layout.py
mk3/routed/: BUILD.bazel  board.kicad_pcb  lcsc_part_numbers.csv  mk3a.kicad_pcb  mk3s.kicad_pcb
