load("@rules_python//python:defs.bzl", "py_binary")
load("@my_deps//:requirements.bzl", "requirement")
load("@com_github_kleinpa_kicadbazel//tools:defs.bzl", "kicad_gerbers")

#load("@com_github_kleinpa_keyboardtoolbox//kbtb:defs.bzl", "build_keyboard")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

py_binary(
    name = "make_plate",
    srcs = [
        "kicad_utils.py",
        "layout.py",
        "make_plate.py",
        "utils.py",
    ],
    deps = [
        "@com_github_kleinpa_kicadbazel//:pcbnew",
        requirement("absl-py"),
        requirement("ezdxf"),
        requirement("shapely"),
    ],
)

genrule(
    name = "keyboard_plate_dxf",
    outs = ["keyboard-plate.dxf"],
    cmd = "LD_LIBRARY_PATH='$(execpath //:make_plate).runfiles/com_gitlab_kicad_kicad' ./$(location //:make_plate) --format=dxf --output=\"$@\"",
    exec_tools = [
        "@com_github_kleinpa_kicadbazel//:pcbnew",
    ],
    tools = [":make_plate"],
)

genrule(
    name = "keyboard_plate_svg",
    outs = ["keyboard-plate.svg"],
    cmd = "LD_LIBRARY_PATH='$(execpath //:make_plate).runfiles/com_gitlab_kicad_kicad' ./$(location //:make_plate) --format=svg --output=\"$@\"",
    exec_tools = [
        "@com_github_kleinpa_kicadbazel//:pcbnew",
    ],
    tools = [":make_plate"],
)

genrule(
    name = "keyboard_plate_kicad",
    outs = ["keyboard-plate.kicad_pcb"],
    cmd = "LD_LIBRARY_PATH='$(execpath //:make_plate).runfiles/com_gitlab_kicad_kicad' ./$(location //:make_plate) --format=kicad_pcb --output=\"$@\"",
    exec_tools = [
        "@com_github_kleinpa_kicadbazel//:pcbnew",
    ],
    tools = [":make_plate"],
)

py_binary(
    name = "make_pcb",
    srcs = [
        "kicad_utils.py",
        "layout.py",
        "make_pcb.py",
        "utils.py",
    ],
    data = ["@com_github_keebio_keebio_parts//:all"],
    deps = [
        "@com_gitlab_kicad_kicad//:pcbnew",
        requirement("absl-py"),
        requirement("shapely"),
    ],
)

genrule(
    name = "keyboard_pcb_kicad",
    srcs = [
        "@com_github_keebio_keebio_parts//:all",
        "@com_gitlab_kicad_libraries_kicad_footprints//:all",
    ],
    outs = ["keyboard-pcb.kicad_pcb"],
    cmd = "LD_LIBRARY_PATH='$(execpath //:make_pcb).runfiles/com_gitlab_kicad_kicad' ./$(location //:make_pcb) --output=\"$@\"",
    exec_tools = [
        "@com_github_kleinpa_kicadbazel//:pcbnew",
    ],
    tools = [":make_pcb"],
)

kicad_gerbers(
    name = "quine_mk1_main_gerbers",
    src = ":quine-mk1-main-routed.kicad_pcb",
)

kicad_gerbers(
    name = "keyboard_plate_gerbers",
    src = ":keyboard_plate_kicad",
)

pkg_tar(
    name = "archive",
    srcs = [
    ],
)
