load("@rules_python//python:defs.bzl", "py_binary")
load("@my_deps//:requirements.bzl", "requirement")
load("@com_github_kleinpa_keyboardtoolbox//kbtb:defs.bzl", "build_keyboard")
load("@com_github_kleinpa_kicadbazel//tools:defs.bzl", "kicad_gerbers")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

py_binary(
    name = "layout",
    srcs = [
        "layout.py",
    ],
    deps = [
        requirement("absl-py"),
        "@com_github_kleinpa_keyboardtoolbox//kbtb:keyboard_lib",
    ],
)

genrule(
    name = "layout_pb",
    outs = ["layout.pb"],
    cmd = "./$(location :layout) --output=\"$@\"",
    exec_tools = [":layout"],
)

build_keyboard(
    name = "mk2",
    src = ":layout_pb",
)

pkg_tar(
    name = "archive",
    srcs = [
        "mk2.kicad_pcb",
        "mk2.svg",
        "mk2-info.json",
        "mk2_plate_bottom.dxf",
        "mk2_plate_bottom.kicad_pcb",
        "mk2_plate_top.dxf",
        "mk2_plate_top.kicad_pcb",
    ],
)

kicad_gerbers(
    name = "mk2_routed",
    src = "board_routed.kicad_pcb",
    visibility = ["//visibility:public"],
)
