load("@rules_python//python:defs.bzl", "py_binary")
load("@my_deps//:requirements.bzl", "requirement")
load("@com_github_kleinpa_keyboardtoolbox//kbtb:defs.bzl", "build_keyboard")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

py_binary(
    name = "layout",
    srcs = [
        "layout.py",
    ],
    deps = [
        requirement("absl-py"),
        "@com_github_kleinpa_keyboardtoolbox//kbtb:keyboard_lib",
    ],
)

genrule(
    name = "layout_pb",
    outs = ["layout.pb"],
    cmd = "./$(location :layout) --output=\"$@\"",
    exec_tools = [":layout"],
)

build_keyboard(
    name = "mk3",
    src = ":layout_pb",
)

pkg_tar(
    name = "archive",
    srcs = [
        "mk3.kicad_pcb",
        "mk3.svg",
        "mk3_plate_bottom.dxf",
        "mk3_plate_top.dxf",
    ],
)
