load("@rules_python//python:defs.bzl", "py_binary")
load("@my_deps//:requirements.bzl", "requirement")
load("@com_github_kleinpa_keyboardtoolbox//kbtb:defs.bzl", "build_keyboard")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

py_binary(
    name = "layout",
    srcs = [
        "layout.py",
    ],
    deps = [
        requirement("absl-py"),
        "@com_github_kleinpa_keyboardtoolbox//kbtb:keyboard_lib",
    ],
)

genrule(
    name = "layout_stm32f072_pb",
    outs = ["layout.pb"],
    cmd = "./$(location :layout) --variant stm32f072 --output=\"$@\"",
    exec_tools = [":layout"],
)

build_keyboard(
    name = "mk3",
    src = ":layout_stm32f072_pb",
)

build_keyboard(
    name = "mk3_stm32f072",
    src = ":layout_stm32f072_pb",
)

genrule(
    name = "layout_atmega32u4_pb",
    outs = ["layout_atmega32u4.pb"],
    cmd = "./$(location :layout) --variant atmega32u4 --output=\"$@\"",
    exec_tools = [":layout"],
)

build_keyboard(
    name = "mk3_atmega32u4",
    src = ":layout_atmega32u4_pb",
)

pkg_tar(
    name = "archive",
    srcs = [
        "mk3.svg",
        "mk3_atmega32u4.kicad_pcb",
        "mk3_atmega32u4-info.json",
        "mk3_plate_bottom.dxf",
        "mk3_plate_top.dxf",
        "mk3_stm32f072.kicad_pcb",
    ],
)
