load("@com_github_kleinpa_kicadbazel//tools:defs.bzl", "gerbers_from_kicad")
load("@com_github_kleinpa_keyboardtoolbox//kbtb:defs.bzl", "bomcpl_from_kicad")

gerbers_from_kicad(
    name = "board",
    src = "board.kicad_pcb",
)

bomcpl_from_kicad(
    name = "board_bom",
    src = "board.kicad_pcb",
)
